--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,5 +10,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eef1ff;
+  background-color: #000000;
+  color: #EEF1FF;
 };
